--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,7 +1,7 @@
 <h1>weeks</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/week1-5.html">week1-5</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/week6-10.html">week6-10</a></p>
-<p>week11-18</p>
+<p><a href="https://s40723212.github.io/cd2020/content/week11-18.html" target="_blank">week11-18</a></p>
 <p></p><h2>week1-5</h2>
 <p>week1</p>
 <blockquote>1.新建個人倉儲</blockquote>
@@ -271,10 +271,13 @@
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/gYMqfnsto7Q" width="500"></iframe></strong></p>
 <p><strong><big><big>測試影片</big></big></strong></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p>
-<h2>week11-week18</h2>
+<h2>week11-18</h2>
 <p>week11</p>
 <p>week12</p>
 <p>week13</p>
+<p>ubuntu IPV4遠端連線設定</p>
+<p>近端python3 wsgi.py 無法成功開啟-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></p>
+<p>操作步驟</p>
 <p>week14</p>
 <p>week15</p>
 <p>week16</p>
