--- a/content/notes.html
+++ b/content/notes.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a><li><a href='week11-week18.html'>week11-week18</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a><li><a href='week11-18.html'>week11-18</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week11-week18 << <a href='week11-week18.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart<br /><h1>notes</h1>
+    <div id="tipue_search_content">week11-18 << <a href='week11-18.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart<br /><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
-<br />week11-week18 << <a href='week11-week18.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart</div>
+<br />week11-18 << <a href='week11-18.html'>Previous</a> <a href='Dart.html'>Next</a> >> Dart</div>
         
     <!-- footer -->
       <div class="container">
