--- a/content/week11-18.html
+++ b/content/week11-18.html
@@ -143,7 +143,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a><li><a href='week11-week18.html'>week11-week18</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
+                     <li class='has-children'><a href='weeks.html'>weeks</a><ul class='dropdown'><li><a href='week1-5.html'>week1-5</a><li><a href='week6-10.html'>week6-10</a><li><a href='week11-18.html'>week11-18</a></li></ul><li class='has-children'><a href='notes.html'>notes</a><ul class='dropdown'><li class='has-children'><a href='Dart.html'>Dart</a><ul class='dropdown'><li><a href='object orientend  programming(OOP).html'>object orientend  programming(OOP)</a><li><a href='overview.html'>overview</a><li><a href='environment.html'>environment</a><li><a href='Data types.html'>Data types</a></li></ul><li><a href='Class.html'>Class</a></li></ul><li><a href='About.html'>About</a></li>
                       </ul>
                 </nav>
               </div>
@@ -154,10 +154,13 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week11-week18</h1>
-<p>week11</p>
-<p>week12</p>
+    <div id="tipue_search_content">week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week11-18</h1>
+<p>week11-12</p>
+<p>翻譯assignment-<a href="https://github.com/s40723212/cd2020/tree/master/downloads" target="_blank">連結</a></p>
 <p>week13</p>
+<p>ubuntu IPV4遠端連線設定</p>
+<p>近端python3 wsgi.py 無法成功開啟-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></p>
+<p>操作步驟</p>
 <p>week14</p>
 <p>week15</p>
 <p>week16</p>
