--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -273,16 +273,26 @@
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iDmgXv6CaVE" width="500"></iframe></strong></p>
 <h2>week11-18</h2>
 <p>week11</p>
+<p>翻譯assignment-<a href="https://github.com/s40723212/cd2020/tree/master/downloads" target="_blank">連結</a></p>
+<hr/>
 <p>week12</p>
+<p><span>協同分組倉儲cmsimde中若無東西-解決方法</span></p>
+<hr/>
 <p>week13</p>
 <p>ubuntu IPV4遠端連線設定</p>
 <p>近端python3 wsgi.py 無法成功開啟-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></p>
 <p>操作步驟</p>
 <p>week14</p>
+<hr/>
 <p>week15</p>
+<hr/>
 <p>week16</p>
+<hr/>
 <p>week17</p>
-<p>week18</p><h1>notes</h1>
+<hr/>
+<p>week18</p>
+<hr/>
+<p></p><h1>notes</h1>
 <p><a href="https://s40723212.github.io/cd2020/content/Dart.html" target="_blank">About Dart</a></p>
 <p><a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">About Class</a></p>
 <h2>Dart</h2>
@@ -380,5 +390,8 @@
 <p><span>If the type of a variable is not explicitly specified, the variable’s type is <b>dynamic</b><span>. The<span> </span></span><b>dynamic</b><span><span> </span>keyword can also be used as a type annotation explicitly.</span></span></p>
 <p></p><h2>Class</h2>
 <p>ubuntu 設定IPV4 無法啟動近端</p>
-<p><img alt="" height="359" src="/images/ununtu IP4近端無法啟動.PNG" width="500"/></p><h1>About</h1>
+<p><img alt="" height="359" src="/images/ununtu IP4近端無法啟動.PNG" width="500"/></p>
+<hr/>
+<p>分組協同倉儲中的cmsimde無東西</p>
+<p>解決方法</p><h1>About</h1>
 <p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div>
