--- a/content/week11-18.html
+++ b/content/week11-18.html
@@ -155,17 +155,29 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week11-18</h1>
-<p>week11-12</p>
+<p>week11</p>
 <p>翻譯assignment-<a href="https://github.com/s40723212/cd2020/tree/master/downloads" target="_blank">連結</a></p>
+<hr/>
+<p>week12</p>
+<p><span>協同分組倉儲cmsimde中若無東西-解決方法</span></p>
+<p>分組倉儲網站<a href="http://mde.tw/cdbw12-3/content/index.html">http://mde.tw/cdbw12-3/content/index.html</a></p>
+<p>分組倉儲<a href="https://github.com/mdecourse/cdbw12-3">https://github.com/mdecourse/cdbw12-3</a></p>
+<hr/>
 <p>week13</p>
 <p>ubuntu IPV4遠端連線設定</p>
 <p>近端python3 wsgi.py 無法成功開啟-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></p>
 <p>操作步驟</p>
 <p>week14</p>
+<hr/>
 <p>week15</p>
+<hr/>
 <p>week16</p>
+<hr/>
 <p>week17</p>
-<p>week18</p><br />week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
+<hr/>
+<p>week18</p>
+<hr/>
+<p></p><br />week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
         
     <!-- footer -->
       <div class="container">
