--- a/content/Class.html
+++ b/content/Class.html
@@ -156,7 +156,10 @@ img.add_border {
         </header>
     <div id="tipue_search_content">Data types << <a href='Data types.html'>Previous</a> <a href='About.html'>Next</a> >> About<br /><h1>Class</h1>
 <p>ubuntu 設定IPV4 無法啟動近端</p>
-<p><img alt="" height="359" src="./../images/ununtu IP4近端無法啟動.PNG" width="500"/></p><br />Data types << <a href='Data types.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p><img alt="" height="359" src="./../images/ununtu IP4近端無法啟動.PNG" width="500"/></p>
+<hr/>
+<p>分組協同倉儲中的cmsimde無東西</p>
+<p>解決方法</p><br />Data types << <a href='Data types.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
