class-分組協同倉儲中的cmsimde無檔案

--- a/config/content.htm
+++ b/config/content.htm
@@ -276,8 +276,8 @@
 <p>翻譯assignment-<a href="https://github.com/s40723212/cd2020/tree/master/downloads" target="_blank">連結</a></p>
 <hr/>
 <p>week12</p>
-<p><span>協同分組倉儲cmsimde中若無東西-解決方法</span></p>
-<p>分組倉儲網站<a href="http://mde.tw/cdbw12-3/content/index.html">http://mde.tw/cdbw12-3/content/index.html</a></p>
+<p><span>協同分組倉儲cmsimde中若無東西-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></span></p>
+<p>分組網站<a href="http://mde.tw/cdbw12-3/content/index.html">http://mde.tw/cdbw12-3/content/index.html</a></p>
 <p>分組倉儲<a href="https://github.com/mdecourse/cdbw12-3">https://github.com/mdecourse/cdbw12-3</a></p>
 <hr/>
 <p>week13</p>
@@ -394,6 +394,11 @@
 <p>ubuntu 設定IPV4 無法啟動近端</p>
 <p><img alt="" height="359" src="/images/ununtu IP4近端無法啟動.PNG" width="500"/></p>
 <hr/>
-<p>分組協同倉儲中的cmsimde無東西</p>
-<p>解決方法</p><h1>About</h1>
+<p>分組協同倉儲中的cmsimde無檔案</p>
+<p><img alt="" height="268" src="/images/分組cmsimde裡面沒東西-1.PNG" width="500"/></p>
+<p>解決方法</p>
+<p>依序輸入git submodule init    -    git  sumodule update這兩個指令即可解決</p>
+<p><img alt="" height="269" src="/images/分組cmsimde沒東西-2.PNG" width="500"/></p>
+<p>影片操作</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u-gOzsVrZdY" width="500"></iframe></p><h1>About</h1>
 <p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div>
