--- a/content/Class.html
+++ b/content/Class.html
@@ -159,7 +159,12 @@ img.add_border {
 <p><img alt="" height="359" src="./../images/ununtu IP4近端無法啟動.PNG" width="500"/></p>
 <hr/>
 <p>分組協同倉儲中的cmsimde無東西</p>
-<p>解決方法</p><br />Data types << <a href='Data types.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p><img alt="" height="268" src="./../images/分組cmsimde裡面沒東西-1.PNG" width="500"/></p>
+<p>解決方法</p>
+<p>依序輸入git submodule init    -    git  sumodule update這兩個指令即可解決</p>
+<p><img alt="" height="269" src="./../images/分組cmsimde沒東西-2.PNG" width="500"/></p>
+<p>影片操作</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u-gOzsVrZdY" width="500"></iframe></p><br />Data types << <a href='Data types.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
