--- a/content/week11-18.html
+++ b/content/week11-18.html
@@ -159,7 +159,7 @@ img.add_border {
 <p>翻譯assignment-<a href="https://github.com/s40723212/cd2020/tree/master/downloads" target="_blank">連結</a></p>
 <hr/>
 <p>week12</p>
-<p><span>協同分組倉儲cmsimde中若無東西-解決方法</span></p>
+<p><span>協同分組倉儲cmsimde中若無東西-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></span></p>
 <p>分組倉儲網站<a href="http://mde.tw/cdbw12-3/content/index.html">http://mde.tw/cdbw12-3/content/index.html</a></p>
 <p>分組倉儲<a href="https://github.com/mdecourse/cdbw12-3">https://github.com/mdecourse/cdbw12-3</a></p>
 <hr/>
