class-分組協同倉儲中的cmsimde無檔案

--- a/content/Class.html
+++ b/content/Class.html
@@ -158,7 +158,7 @@ img.add_border {
 <p>ubuntu 設定IPV4 無法啟動近端</p>
 <p><img alt="" height="359" src="./../images/ununtu IP4近端無法啟動.PNG" width="500"/></p>
 <hr/>
-<p>分組協同倉儲中的cmsimde無東西</p>
+<p>分組協同倉儲中的cmsimde無檔案</p>
 <p><img alt="" height="268" src="./../images/分組cmsimde裡面沒東西-1.PNG" width="500"/></p>
 <p>解決方法</p>
 <p>依序輸入git submodule init    -    git  sumodule update這兩個指令即可解決</p>
