ubuntu 設定IPV4無法啟用近端，及Ubuntu中的leo 找不到alloweExt

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -393,8 +393,14 @@
 <p></p><h2>Class</h2>
 <p>ubuntu 設定IPV4 無法啟動近端</p>
 <p><img alt="" height="359" src="/images/ununtu IP4近端無法啟動.PNG" width="500"/></p>
+<p>解決方法</p>
+<p>會有這個問題發生主要是因為，近端版本與遠端版本對不上，因此只要下這個指令即可完成pip install pydrive即可解決問題</p>
 <hr/>
-<p>分組協同倉儲中的cmsimde無東西</p>
+<p>Ubuntu  中的Leo 找不到alloweExt</p>
+<p>原因:版本已改，導致路徑跟著變動，新的路徑如所示</p>
+<p><img alt="" height="332" src="/images/ttt question.PNG" width="500"/></p>
+<hr/>
+<p>分組協同倉儲中的cmsimde無檔案</p>
 <p><img alt="" height="268" src="/images/分組cmsimde裡面沒東西-1.PNG" width="500"/></p>
 <p>解決方法</p>
 <p>依序輸入git submodule init    -    git  sumodule update這兩個指令即可解決</p>
