--- a/content/week11-18.html
+++ b/content/week11-18.html
@@ -162,6 +162,9 @@ img.add_border {
 <p><span>協同分組倉儲cmsimde中若無東西-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></span></p>
 <p>分組網站<a href="http://mde.tw/cdbw12-3/content/index.html">http://mde.tw/cdbw12-3/content/index.html</a></p>
 <p>分組倉儲<a href="https://github.com/mdecourse/cdbw12-3">https://github.com/mdecourse/cdbw12-3</a></p>
+<p></p>
+<p>week12直播討論</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/is_sLTLHV5M" width="500"></iframe></p>
 <hr/>
 <p>week13</p>
 <p>ubuntu IPV4遠端連線設定</p>
