--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -283,7 +283,9 @@
 <p>week13</p>
 <p>ubuntu IPV4遠端連線設定</p>
 <p>近端python3 wsgi.py 無法成功開啟-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></p>
+<p></p>
 <p>操作步驟</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lPaJcVRtRZw" width="500"></iframe></p>
 <p>week14</p>
 <hr/>
 <p>week15</p>
