week11-week14直播討論內容

--- a/content/week11-18.html
+++ b/content/week11-18.html
@@ -155,32 +155,40 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes<br /><h1>week11-18</h1>
-<p>week11</p>
+<p><strong><big><big>week11</big></big></strong></p>
 <p>翻譯assignment-<a href="https://github.com/s40723212/cd2020/tree/master/downloads" target="_blank">連結</a></p>
+<p><big><big>直播討論</big></big></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/NjWnIy4vX1g" width="500"></iframe></p>
 <hr/>
-<p>week12</p>
+<p><strong><big><big>week12</big></big></strong></p>
 <p><span>協同分組倉儲cmsimde中若無東西-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></span></p>
 <p>分組網站<a href="http://mde.tw/cdbw12-3/content/index.html">http://mde.tw/cdbw12-3/content/index.html</a></p>
 <p>分組倉儲<a href="https://github.com/mdecourse/cdbw12-3">https://github.com/mdecourse/cdbw12-3</a></p>
 <p></p>
-<p>week12直播討論</p>
+<p><big><big>直播討論</big></big></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/is_sLTLHV5M" width="500"></iframe></p>
 <hr/>
-<p>week13</p>
+<p><strong><big><big>week13</big></big></strong></p>
 <p>ubuntu IPV4遠端連線設定</p>
 <p>近端python3 wsgi.py 無法成功開啟-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></p>
 <p></p>
 <p>操作步驟</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lPaJcVRtRZw" width="500"></iframe></p>
-<p>week14</p>
+<p><big><big>直播討論</big></big></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CLbEVpAV7gs" width="500"></iframe></p>
 <hr/>
-<p>week15</p>
+<p><strong><big><big>week14</big></big></strong></p>
+<p><big><big>直播討論</big></big></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/N6jCSwv2eI0" width="500"></iframe></strong></p>
+<p><strong></strong></p>
 <hr/>
-<p>week16</p>
+<p><strong><big><big>week15</big></big></strong></p>
 <hr/>
-<p>week17</p>
+<p><strong><big><big>week16</big></big></strong></p>
 <hr/>
-<p>week18</p>
+<p><strong><big><big>week17</big></big></strong></p>
+<hr/>
+<p><strong><big><big>week18</big></big></strong></p>
 <hr/>
 <p></p><br />week6-10 << <a href='week6-10.html'>Previous</a> <a href='notes.html'>Next</a> >> notes</div>
         
