啟動wsgi.py時發生以下訊息

--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -274,13 +274,15 @@
 <h2>week11-18</h2>
 <p><strong><big><big>week11</big></big></strong></p>
 <p>翻譯assignment-<a href="https://github.com/s40723212/cd2020/tree/master/downloads" target="_blank">連結</a></p>
+<p><big><big>直播討論</big></big></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/NjWnIy4vX1g" width="500"></iframe></p>
 <hr/>
 <p><strong><big><big>week12</big></big></strong></p>
 <p><span>協同分組倉儲cmsimde中若無東西-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></span></p>
 <p>分組網站<a href="http://mde.tw/cdbw12-3/content/index.html">http://mde.tw/cdbw12-3/content/index.html</a></p>
 <p>分組倉儲<a href="https://github.com/mdecourse/cdbw12-3">https://github.com/mdecourse/cdbw12-3</a></p>
 <p></p>
-<p><strong><big><big>直播討論</big></big></strong></p>
+<p><big><big>直播討論</big></big></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/is_sLTLHV5M" width="500"></iframe></p>
 <hr/>
 <p><strong><big><big>week13</big></big></strong></p>
@@ -289,9 +291,13 @@
 <p></p>
 <p>操作步驟</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/lPaJcVRtRZw" width="500"></iframe></p>
-<p><strong><big><big>直播討論</big></big></strong></p>
+<p><big><big>直播討論</big></big></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CLbEVpAV7gs" width="500"></iframe></p>
+<hr/>
 <p><strong><big><big>week14</big></big></strong></p>
+<p><big><big>直播討論</big></big></p>
+<p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/N6jCSwv2eI0" width="500"></iframe></strong></p>
+<p><strong></strong></p>
 <hr/>
 <p><strong><big><big>week15</big></big></strong></p>
 <hr/>
@@ -413,5 +419,15 @@
 <p>依序輸入git submodule init    -    git  sumodule update這兩個指令即可解決</p>
 <p><img alt="" height="269" src="/images/分組cmsimde沒東西-2.PNG" width="500"/></p>
 <p>影片操作</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u-gOzsVrZdY" width="500"></iframe></p><h1>About</h1>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u-gOzsVrZdY" width="500"></iframe></p>
+<hr/>
+<p><strong><big><big>啟動wsgi.py時發生以下訊息</big></big></strong></p>
+<p><img alt="" height="122" src="/images/更改gm.PNG" width="500"/></p>
+<p>首先這裡有兩個錯誤<br/>一. ouath gm.txt檔名錯誤，導致無法正常執行<br/>二. ouath ouath 檔案中只有一行編碼</p>
+<p>問題1 解決方法</p>
+<p>使用檔案管理員進入對應的資料夾，找到錯誤檔案名稱並修改它</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zv26-yKUI0o" width="500"></iframe></p>
+<p>問題2 解決方法</p>
+<img alt="" height="119" src="/images/%E5%95%8F%E9%A1%8C%E7%99%BC%E7%94%9F.PNG" width="500"/>
+<p></p><h1>About</h1>
 <p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div>
