--- a/content/Class.html
+++ b/content/Class.html
@@ -170,7 +170,21 @@ img.add_border {
 <p>依序輸入git submodule init    -    git  sumodule update這兩個指令即可解決</p>
 <p><img alt="" height="269" src="./../images/分組cmsimde沒東西-2.PNG" width="500"/></p>
 <p>影片操作</p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u-gOzsVrZdY" width="500"></iframe></p><br />Data types << <a href='Data types.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/u-gOzsVrZdY" width="500"></iframe></p>
+<hr/>
+<p><strong><big><big>啟動wsgi.py時發生以下訊息</big></big></strong></p>
+<p><img alt="" height="122" src="./../images/更改gm.PNG" width="500"/></p>
+<p>首先這裡有兩個錯誤<br/>一. ouath gm.txt檔名錯誤，導致無法正常執行<br/>二. ouath ouath 檔案中只有一行編碼</p>
+<p>問題1 解決方法</p>
+<p>使用檔案管理員進入對應的資料夾，找到錯誤檔案名稱並修改它</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zv26-yKUI0o" width="500"></iframe></p>
+<p>問題2 解決方法</p>
+<p><img alt="" height="119" src="./../images/%E5%95%8F%E9%A1%8C%E7%99%BC%E7%94%9F.PNG" width="500"/></p>
+<p>依照前面公布影片的進入剛改好的檔案，將原本只有一行文字檔案改成多行文字檔案(如圖所示)</p>
+<p><img alt="" height="587" src="./../images/無法儲存.PNG" width="500"/></p>
+<p><span>你有可能會遇到無法儲存的情況，遇到這種情況亦照下圖解決即可，因為權限的問題以至於你沒辦法直接修改，假如你是用sudo修改，就不需要權限了</span></p>
+<p><span><img alt="" height="393" src="./../images/權限問題.PNG" width="500"/></span></p>
+<p></p><br />Data types << <a href='Data types.html'>Previous</a> <a href='About.html'>Next</a> >> About</div>
         
     <!-- footer -->
       <div class="container">
