--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -295,6 +295,8 @@
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CLbEVpAV7gs" width="500"></iframe></p>
 <hr/>
 <p><strong><big><big>week14</big></big></strong></p>
+<p><strong><span>ubuntu IPV6遠端連線設定</span></strong></p>
+<p><strong><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ov_tAgz2d4Y" width="500"></iframe></span></strong></p>
 <p><big><big>直播討論</big></big></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/N6jCSwv2eI0" width="500"></iframe></strong></p>
 <p><strong></strong></p>
@@ -428,6 +430,10 @@
 <p>使用檔案管理員進入對應的資料夾，找到錯誤檔案名稱並修改它</p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/zv26-yKUI0o" width="500"></iframe></p>
 <p>問題2 解決方法</p>
-<img alt="" height="119" src="/images/%E5%95%8F%E9%A1%8C%E7%99%BC%E7%94%9F.PNG" width="500"/>
+<p><img alt="" height="119" src="/images/%E5%95%8F%E9%A1%8C%E7%99%BC%E7%94%9F.PNG" width="500"/></p>
+<p>依照前面公布影片的進入剛改好的檔案，將原本只有一行文字檔案改成多行文字檔案(如圖所示)</p>
+<p><img alt="" height="587" src="/images/無法儲存.PNG" width="500"/></p>
+<p><span>你有可能會遇到無法儲存的情況，遇到這種情況亦照下圖解決即可，因為權限的問題以至於你沒辦法直接修改，假如你是用sudo修改，就不需要權限了</span></p>
+<p><span><img alt="" height="393" src="/images/權限問題.PNG" width="500"/></span></p>
 <p></p><h1>About</h1>
 <p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div>
