--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -296,6 +296,7 @@
 <hr/>
 <p><strong><big><big>week14</big></big></strong></p>
 <p><strong><span>ubuntu IPV6遠端連線設定</span></strong></p>
+<p><strong><span>近端python3 wsgi.py 無法成功開啟-<a href="https://s40723212.github.io/cd2020/content/Class.html" target="_blank">解決方法</a></span></strong></p>
 <p><strong><span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/Ov_tAgz2d4Y" width="500"></iframe></span></strong></p>
 <p><big><big>直播討論</big></big></p>
 <p><strong><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/N6jCSwv2eI0" width="500"></iframe></strong></p>
