--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -303,8 +303,7 @@
 <p><strong></strong></p>
 <hr/>
 <p><strong><big><big>week15</big></big></strong></p>
-<hr/>
-<p><strong><big><big>week16</big></big></strong></p>
+<p></p>
 <hr/>
 <p><strong><big><big>week17</big></big></strong></p>
 <p><strong>期末報告影片-</strong></p>
@@ -438,5 +437,8 @@
 <p><img alt="" height="587" src="/images/無法儲存.PNG" width="500"/></p>
 <p><span>你有可能會遇到無法儲存的情況，遇到這種情況亦照下圖解決即可，因為權限的問題以至於你沒辦法直接修改，假如你是用sudo修改，就不需要權限了</span></p>
 <p><span><img alt="" height="393" src="/images/權限問題.PNG" width="500"/></span></p>
-<p></p><h1>About</h1>
+<hr/>
+<p><big><big><strong>遠端連線mako error的問題<img alt="" height="234" src="/images/mako error.PNG" width="500"/></strong></big></big></p>
+<p>Question:虛擬主機板本事舊的</p>
+<p>Solution:輸入pip3 install mako==1.1.3來更新即可解決問題</p><h1>About</h1>
 <p><big><big><a href="https://github.com/s40723212/cd2020" target="_blank">倉儲</a></big></big></p></div></div></div>
